force-app/main/default/objects/External_Giving_Detail__c.object
<CustomObject>
    <description>A donation made outside of Monash.</description>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Constituent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>External Giving Details</relationshipLabel>
        <relationshipName>External_Giving_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gift_Year__c</fullName>
        <label>Gift Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Name__c</fullName>
        <inlineHelpText>Recipient of gift</inlineHelpText>
        <label>Account Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>External Giving Details</relationshipLabel>
        <relationshipName>External_Giving_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Donor Advised</fullName>
                </value>
                <value>
                    <fullName>FRC Gift Search</fullName>
                </value>
                <value>
                    <fullName>News/Media</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aging and Aged Care</fullName>
                </value>
                <value>
                    <fullName>Animal Welfare</fullName>
                </value>
                <value>
                    <fullName>Arts and Culture</fullName>
                </value>
                <value>
                    <fullName>Civil Society, Law and Civil Rights</fullName>
                </value>
                <value>
                    <fullName>Community Development and Housing</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Emergency/Disaster Relief</fullName>
                </value>
                <value>
                    <fullName>Environment and Conservation</fullName>
                </value>
                <value>
                    <fullName>LGBTQ+ interests</fullName>
                </value>
                <value>
                    <fullName>Indigenous</fullName>
                </value>
                <value>
                    <fullName>International Development and Relations</fullName>
                </value>
                <value>
                    <fullName>Jewish Interests</fullName>
                </value>
                <value>
                    <fullName>Medical Research</fullName>
                </value>
                <value>
                    <fullName>Mental Health</fullName>
                </value>
                <value>
                    <fullName>Performing Arts</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Political Parties</fullName>
                </value>
                <value>
                    <fullName>Recreation and Sport</fullName>
                </value>
                <value>
                    <fullName>Religion</fullName>
                </value>
                <value>
                    <fullName>STEM and Enterprise (non-medical research)</fullName>
                </value>
                <value>
                    <fullName>Social Sciences</fullName>
                </value>
                <value>
                    <fullName>Visual Arts</fullName>
                </value>
                <value>
                    <fullName>Youth and Young People</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>External Giving Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EX-GIFT-{0000}</displayFormat>
        <label>External Giving Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External Giving Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>